[package]
name = "mping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ping = "0.4.1"
pnet_packet = "0.34.0"
rand = "0.8.5"
socket2 = { version = "0.5.4", features = ["all"] }
thiserror = "1.0.49"
