[package]
name = "mping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
env_logger = "0.10.0"
ipnetwork = "0.20.0"
log = "0.4.20"
ping = "0.4.1"
pnet_packet = "0.34.0"
rand = "0.8.5"
rate-limit-macro = "1.0.1"
rate_limit = "0.1.1"
socket2 = { version = "0.5.4", features = ["all"] }
structopt = "0.3.26"
thiserror = "1.0.49"
ticker = "0.1.1"
